# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "factorio-frame-host"
version = "0.1.0"
authors = ["barron"]
edition = "2018"

[dependencies]
frame-host = { path = "../frame-host" }

futures = "0.3"
ctrlc = "3.1"
crossbeam-channel = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
