# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "factorio-frame-host"
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2018"

[dependencies]
frame-host = { path = "../frame-host" }
asio-logger = { path = "../asio-logger" }

log = "0.4.11"
futures = "0.3"
ctrlc = "3.1"
crossbeam-channel = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
