[package]
name = "asio-logger"
description = "A middleware async logger for Frame-Host."
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2018"

[lib]
path = "asio-logger.rs"

[dependencies]
util = { path = "../util" }

slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"

crossbeam-channel = "0.5.0"
thread_local = "1.0.1"
take_mut = "0.2.2"

once_cell = "1.4.1"

futures = "0.3.6"
actix-service = "1.0.6"
actix-web = "3.1.0"
bytes = "0.5.6"
futures-util = "0.3.6"
regex = "1.4.1"
chrono = "0.4.19"
pin-project = "1.0.1"
