# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "factorio-frame-host"
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2018"

[[bin]]
name = "factorio-frame-host"
path = "main.rs"
test = false
bench = false


[dependencies]
frame-host = { path = "../frame-host" }
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
util = { path = "../util" }
web-api = { path = "../web-api" }

log = "0.4.11"
futures = "0.3"
ctrlc = "3.1"
crossbeam-channel = "0.4"
