[package]
name = "frame-host"
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2018"

[lib]
path = "frame-host.rs"

[dependencies]
slog = "2.5.2"
slog-term = "2.6.0"
asio-logger = { path = "../asio-logger" }
util = { path = "../util" }

serde = "1.0"
serde_json = "1.0"
