[package]
name = "util"
description = "A middleware collection of utilites for Frame-Host."
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2018"

[workspace]
members = [".", "examples/environment"]

[lib]
crate-type = ["dylib"]
path = "util.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
