[package]
name = "web-api"
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2018"

[dependencies]
asio-logger = { path = "../asio-logger" }
util = { path = "../util" }

actix = "0.10.0"
actix-web = "3.0.2"
actix-web-actors = "3.0.0"
actix-files = "0.3.0"
actix-session = "0.4.0"
actix-utils = "2.0.0"

env_logger = "0.7.1"
