[package]
name = "web-api"
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2018"

[lib]
path = "web-api.rs"

[dependencies]
util = { path = "../util" }

slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
actix-slog = "0.2.1"
actix = "0.10.0"
actix-web = "3.1.0"
actix-web-actors = "3.0.0"
actix-files = "0.3.0"
actix-session = "0.4.0"
actix-utils = "2.0.0"

chrono = "0.4.19"
futures = "0.3.7"
pin-project = "1.0.1"

env_logger = "0.7.1"
